# 10kbclub

./: .gitignore  Cargo.toml  FAQ.md  README.md  SCHEMA
assets/: 10kb.css  10kb.js  submit.html
src/: analyzer.rs  cloudflare.rs  config.rs  database.rs  error.rs  lib.rs  relatedlinks.rs
templates/: 10kb_index.html  error.html  index.html  outline.html  related.html  submit.html  submitted.html
