[package]
name = "tenkbclub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tenkb_analyzer"
path = "src/bin/tenkb_analyzer.rs"

[[bin]]
name = "tenkb_server"
path = "src/bin/tenkb_server.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
hex = "0.4.3"
mime = "0.3.17"
minijinja = "2.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
